sc03_01.tex: 尝试加入表格 macros.tex: 加入单元格内换行宏 packages.tex: 加入三线表支持

--- a/common/macros.tex
+++ b/common/macros.tex
@@ -1,1 +1,4 @@
-﻿\newcommand{\authors}[1]{\begin{center}\tt #1\end{center}\par}
+﻿% 显示作者
+\newcommand{\authors}[1]{\begin{center}\tt #1\end{center}\par}
+% 单元格内换行
+\newcommand{\tabincell}[2]{\begin{tabular}{@{}#1@{}}#2\end{tabular}}
