--- a/common/packages.tex
+++ b/common/packages.tex
@@ -5,4 +5,5 @@
 \usepackage{amssymb}
 \usepackage{enumerate}
 \usepackage{mdwlist}
+\usepackage{booktabs}
 \setCJKmainfont[BoldFont={方正黑体简体}, ItalicFont={方正报宋简体}] {方正书宋简体}
