--- a/vol1/cp03/sc03_01.tex
+++ b/vol1/cp03/sc03_01.tex
@@ -3,7 +3,18 @@
 
 降温法的基本原理是利用物质较大的正溶解度温度系数，在晶体生长过程中逐渐降低温度，使析出的物质不断在晶体上生长。用这种方法生长的物质的溶解度温度系数最好不低于1.5g/1000g溶液$\cdot$℃，表3.7列出符合此要求的一些物质的数据。
 
-（表3.7  40℃时，一些物质的溶解度及其温度系数）
+\begin{table}[h]
+\begin{tabular}{c|c|c}\toprule
+物质 & \tabincell{c}{溶解度\\（g/1000g溶液）} & \tabincell{c}{溶解度温度系数\\g/1000g溶液$\cdot$℃}\\\hline
+明矾\quad$\rm K_2SO_4\cdot Al_2(SO_4)_3\cdot 24H_2O$ & 240 & $+9.0$\\
+ADP\quad$\rm NH_4H_2PO_4$ & 360 & $+4.9$\\
+TGS\quad$\rm (NH_2CH_2COOH)_3\cdot H_2SO_4$ & 300 & $+4.6$\\
+KDP\quad$\rm KH_2PO_4$ & 250 & $+3.5$\\
+EGT\quad$\rm ???$ & 598 & $+2.1$\\
+\bottomrule
+\end{tabular}
+\caption{40℃时，一些物质的溶解度及其温度系数}
+\end{table}
 
 降温法生长晶体的几种装置，如图3.18、图3.19和图3.20所示。
 
