--- a/vol1/cp03/sc03_03.tex
+++ b/vol1/cp03/sc03_03.tex
@@ -3,11 +3,31 @@
 
 蒸发法生长晶体的装置和降温法的装置十分类似。所不同的是在降温法中，育晶器中蒸发产生的冷凝水全部回流，而蒸发法则是部分回流。降温法通过降温速度来控制过饱和度，而蒸发法则是通过控制回流比（蒸发量）来控制过饱和度的。
 
-（表3.8  一些适用于蒸发法….及其温度系数）
+\begin{table}[h]
+\centering
+\caption{一些适用于蒸发法生长的晶体在60℃时的溶解度及其温度系数}
+\begin{tabular}{c|c|c}\toprule
+物质 & \tabincell{c}{溶解度\\（g/1000g溶液）} & \tabincell{c}{溶解度温度系数\\g/1000g溶液$\cdot$℃}\\\hline
+$\rm K_4HPO_4$ & 720 & $+0.1$\\
+$\rm Li_2SO_4\cdot H_2O$ & 244 & $-0.36$\\
+$\rm LiIO_3$ & 431 & $0.2$\\
+\bottomrule
+\end{tabular}
+\end{table}
 
 蒸发法生长晶体的装置有许多类型。图3.23示出的是比较简单的一种：在严格密封的育晶器上方设置冷凝器（可通水冷却）。溶剂自溶液表面不断蒸发，水蒸汽在冷凝器上凝结，并积聚在其下方的小杯内，再用虹吸管按控制量移出育晶器外，在晶体生长过程中，取水速度应小于冷凝速度，使大部分冷凝水（包括器壁上的）回流到液面上去，否则液面上易产生自发结晶。这种装置比较适合在较高的生长温度（$>$60℃）使用。温度较低。蒸发量太小，不能满足晶体生长的需要。
 
-（图3.25 蒸发法育晶装置和图3.24 生长NdPP晶体的装置）
+\begin{figure}[h]
+ \centering
+ \includegraphics[width=0.8\textwidth]{fig/cp03/img3.23.jpg}
+ \caption{蒸发法育晶装置。}
+\end{figure}
+
+\begin{figure}[h]
+ \centering
+ \includegraphics[width=0.8\textwidth]{fig/cp03/img3.24.jpg}
+ \caption{生长NdPP晶体的装置。}
+\end{figure}
 
 有时体系中某一成分（如水）的蒸发并不是作为溶剂蒸发直接导致晶体生长，而是引起化学反应，间接导致晶体生长，例如在$\rm Nd_2O_3-H_3PO_4$（或$\rm Nd_2O_3-P_2O_5-H_2O$）体系中生长五磷酸钕（$\rm NdP_5O_{14}$简称NdPP）晶体，其形成机制可能是
 $$ \rm 14\ H_3PO_4 + Nd_2O_3 \xrightarrow{>260℃} 2\ NdP_5O_{14}+2\ H_4P_2O_7+17\ H_2O\uparrow$$
