--- a/vol1/cp03/sc03_01.tex
+++ b/vol1/cp03/sc03_01.tex
@@ -4,6 +4,8 @@
 降温法的基本原理是利用物质较大的正溶解度温度系数，在晶体生长过程中逐渐降低温度，使析出的物质不断在晶体上生长。用这种方法生长的物质的溶解度温度系数最好不低于1.5g/1000g溶液$\cdot$℃，表3.7列出符合此要求的一些物质的数据。
 
 \begin{table}[h]
+\centering
+\caption{40℃时，一些物质的溶解度及其温度系数}
 \begin{tabular}{c|c|c}\toprule
 物质 & \tabincell{c}{溶解度\\（g/1000g溶液）} & \tabincell{c}{溶解度温度系数\\g/1000g溶液$\cdot$℃}\\\hline
 明矾\quad$\rm K_2SO_4\cdot Al_2(SO_4)_3\cdot 24H_2O$ & 240 & $+9.0$\\
@@ -13,20 +15,38 @@ KDP\quad$\rm KH_2PO_4$ & 250 & $+3.5$\\
 EGT\quad$\rm ???$ & 598 & $+2.1$\\
 \bottomrule
 \end{tabular}
-\caption{40℃时，一些物质的溶解度及其温度系数}
 \end{table}
 
 降温法生长晶体的几种装置，如图3.18、图3.19和图3.20所示。
 
 在降温法生长晶体的整个过程中，必须严格控制温度，并按一定程序降温。研究表明，微小的温度波动就足以在生长的晶体中造成某些不均匀区域。为提高晶体生长的完整性，要求控温精度尽可能高（目前已达±0.001℃），此外还需造成适合晶体生长的其他条件。
 
-（图3.18  水浴育晶装置）
+\begin{figure}[h]
+ \centering
+ \includegraphics[width=0.8\textwidth]{fig/cp03/img3.18.jpg}
+ \caption{水浴育晶装置。图中：}
+ 1为掣晶杆；2为晶体；3为转动密封装置；4为浸没式加热器； \\
+ 5为搅拌器；6为控制器（接触温度计）；7为温度计；8为育晶器；\\
+ 9为有孔隔板；10为水槽。
+\end{figure}
 
 在利用降温法来生长晶体的过程中可不用再补充溶液或溶质。因此，整个育晶器在生长过程中必须严格密封，以防溶剂蒸发和外界的污染。例如从重水溶液中生长晶体时，如果密封不好，溶液中的D$_2$O就会同大气中的H$_2$O汽发生同位素交换而使溶液氘化程度下降。为增加温度的稳定性，育晶器的容量必须要大些（大型育晶器有几十升至上千升），加热保温方式有水浴槽或内部加热、外壳加保温套等。育晶器顶部经常有保持冷凝水回流，底部有电炉加热为好，使得溶液表面和底部都有不饱和层保护，避免自发晶核形成。
 
 育晶器内的控温精度除了与育晶装置的结构有关外，很大程度上取决于控温装置，继电器开关式控温一般可以满足水溶液晶体生长的要求，温度波动可以控制在±0.05℃以下，用PID控温方式，特别是使用可编程温度控制器控温，实现控温精度至±0.005℃并不困难，这对培养高完整性单晶十分有利。
 
-（图3.19 图3.20）
+\begin{figure}[h]
+ \centering
+ \includegraphics[width=0.6\textwidth]{fig/cp03/img3.19.jpg}
+ \caption{直接加热的转动育晶器。}
+ 图中：1为掣晶板；2为晶体；3为底部主加热器；4为控制器； 5为辅助小灯泡加热器；6为温度计；7为可逆转动装置（30r/min）。
+\end{figure}
+
+\begin{figure}[H]
+ \centering
+ \includegraphics[width=0.6\textwidth]{fig/cp03/img3.20.jpg}
+ \caption{双浴槽育晶装置。图中：}
+ 1为育晶器；2为内浴槽；3为外浴槽；4为保温层；5为感温元件；6为加热元件；7为转晶马达；8为搅拌马达（1500r/min）；9为籽晶；10为外接冷却装置的进出口。
+\end{figure}
 
 为使溶液温度均匀，并使生长中的各个晶面在过饱和溶液中能得到均匀的溶质供应，要求晶体对溶液作相对运动。这种运动可采取多种形式，如晃动法（晶体固定不动，摇晃整个育晶器）、转晶法（晶体在溶液中作自转，公转或行星式转动）等，其中以晶体在溶液中自转或公转最为常用。为了克服这种方式所造成的的某些晶面迎液而动和使另一些晶面总是背向液流的缺点，转动需要定时换向，即用以下程序进行控制：正转---停转---反转---停转---正转。
 
