common/packages.tex: 修复封面人名不能显示的bug
更改字体的字符集为GBK，解决“潓”字不能显示的问题。
issue #1 closed

--- a/common/packages.tex
+++ b/common/packages.tex
@@ -6,4 +6,4 @@
 \usepackage{enumerate}
 \usepackage{mdwlist}
 \usepackage{booktabs}
-\setCJKmainfont[BoldFont={方正黑体简体}, ItalicFont={方正报宋简体}] {方正书宋简体}
+\setCJKmainfont[BoldFont={方正黑体简体}, ItalicFont={方正报宋_GBK}] {方正书宋_GBK}
