cp01/sc01: 建立基础结构

--- a/vol1/cp01/sc01.tex
+++ b/vol1/cp01/sc01.tex
@@ -3,3 +3,7 @@
 
 两相处于平衡状态时，其宏观性质有什么关系呢？我们可以根据热力学中的平衡判据来求出。
 \input{vol1/cp01/sc01_01} %热平衡
+\input{vol1/cp01/sc01_02} %力学平衡
+\input{vol1/cp01/sc01_03} %传质平衡
+\input{vol1/cp01/sc01_04} %相律
+\input{vol1/cp01/sc01_05} %相变
