--- a/vol1/cp03.tex
+++ b/vol1/cp03.tex
@@ -2,7 +2,7 @@
 \chapter{溶液法生长晶体}
 \authors{高樟寿\quad 蒋民华\quad 王希敏}
 从溶液中生长晶体的历史最久，应用也很广泛。这种方法的基本原理是将原料（溶质）溶解在溶剂中，采取适当的措施造成溶液的过饱和状态，使晶体在其中生长。溶液法具有以下优点：
-\begin{enumerate}[(1)]
+\begin{enumerate}[(1)]\itemsep -0.5ex
 \item 晶体可在远低于其熔点的温度下生长。有许多晶体不到熔点就分解或发生不希望有的晶型转变，有的在熔化时有很高的蒸汽压，溶液使这些晶体可以在较低的温度下生长，从而避免了上述问题。此外，在低温下使晶体生长的热源和生长容器也较易选择。
 \item 降低粘度。有些晶体在熔化状态时粘度很大，冷却时不能形成晶体而成为玻璃体，溶液法采用低粘度的溶剂则可避免这一问题。
 \item 容易长成大块的、均匀性良好的晶体，并且有较完整的外形。
