--- a/vol1/cp03/sc01_02.tex
+++ b/vol1/cp03/sc01_02.tex
@@ -1,7 +1,6 @@
 ﻿\subsection{溶解度和溶解度曲线}
 溶解度是考察溶液中生长晶体的最基本参数。溶解度可用在一定条件（温度、压力）下饱和溶液的浓度来表示。溶质在溶液中的浓度（溶液成分）有以下几种表示方式：
-
-\begin{enumerate}[(1)]
+\begin{enumerate}[(1)]\itemsep -0.5ex
 \item 体积摩尔浓度（mol）：一升溶液中所含溶质的摩尔数。
 \item 重量摩尔浓度（mol）：1000g溶剂中所含溶质的摩尔数。
 \item 摩尔分数（$x$）：溶质摩尔数对溶液总摩尔数之比。
@@ -44,7 +43,7 @@ c_1=\frac{100c_2}{100-c_2}=\frac{100c_3}{100R-c_3}=\frac{100c_4}{100R+c_4(R-1)},
 \log x=\frac{-\Delta H}{2.303R}\left( \frac{1}{T}-\frac{1}{T_0}\right) =\frac{-\Delta H(T_0-T)}{4.579T_0T},
 \end{equation}
 $T_0$为晶体的熔点。从式（3.4）中可看出：
-\begin{enumerate}[(1)]
+\begin{enumerate}[(1)]\itemsep -0.5ex
 \item 大多数晶体的溶解过程是吸热过程，为正，温度升高，溶解度增大。如若是放热过程，则相反。
 \item 在一定温度下，高熔点晶体的溶解度小于低熔点的溶解度。
 \end{enumerate}
@@ -65,7 +64,7 @@ c=A+Bt+Ct^2+\cdots,
 （图3.4）
 
 根据式（3.5）作图得出的溶解度曲线如图3.4（b）所示。图中的横坐标为溶质摩尔分数的对数坐标。右边纵坐标是（因为在273-373K范围内数值很小）的线性坐标。另外，也可以用专门的对数-倒数坐标图纸，将温度（℃）直接在图上标出。图3.4（b）中左边示出的纵坐标就是倒数标尺上直接标出的温度。将图3.4（a），（b）加以比较就可发现这种作图法有如下的一些优越性：
-\begin{enumerate}[(1)]
+\begin{enumerate}[(1)]\itemsep -0.5ex
 \item 线性好。在图3.4（a）中，在0-100℃范围内，CuSO4是平滑曲线，$\rm Na_2SO_4$和$\rm Na_2CrO_4$则分别是两条曲线在拐点（转变点）相交，而在图3.4（b）中，上述三种盐的溶解度曲线都是直线，但对一些溶解度很大的物质，或在很窄的温度区间内存在着数种水合物的物质，其溶解度仍是曲线。醋酸钠在40—50℃ 范围内直线发生弯曲，可能属于后一种情况。
 \item 记录范围宽。对一些溶解度很大的盐类（如铬酸钠和醋酸钠的溶解度曲线）来说，都能像溶解度较小的盐类一样，在0-100 ℃范围内可出，这是通常的作图法无法做到的。
 \item 较清楚地显示出转变点。例如通过两直线交点找$\rm Na_2SO_4$的转变点（32.4℃）要比图3.4（a）中所示延长两条曲线找转变点来得容易和准确。在图3.4（b）中，$\rm CuSO_4$的两条直线大约在67℃相交，表明硫酸铜在该处有不同的晶相转变，而在图3.4（a）中却找不出这一转变点。
