--- a/vol1/cp03/sc03_01.tex
+++ b/vol1/cp03/sc03_01.tex
@@ -51,7 +51,7 @@ EGT\quad$\rm ???$ & 598 & $+2.1$\\
 为使溶液温度均匀，并使生长中的各个晶面在过饱和溶液中能得到均匀的溶质供应，要求晶体对溶液作相对运动。这种运动可采取多种形式，如晃动法（晶体固定不动，摇晃整个育晶器）、转晶法（晶体在溶液中作自转，公转或行星式转动）等，其中以晶体在溶液中自转或公转最为常用。为了克服这种方式所造成的的某些晶面迎液而动和使另一些晶面总是背向液流的缺点，转动需要定时换向，即用以下程序进行控制：正转---停转---反转---停转---正转。
 
 降温法控制晶体生长的主要关键是掌握合适的降温速度。使溶液始终处于亚稳区内，并维持适宜的过饱和度，降温速度一般取决于以下述几个因素：
-\begin{enumerate}[(1)]
+\begin{enumerate}[(1)]\itemsep -0.5ex
 \item 晶体的最大透明生长速度（即在一定条件下不产生宏观缺陷的最大生长速度）。这一数值对不同晶体是有明显差别的（和亚稳区大小有关），例如对硝酸钠（NaNO$_3$）晶体为1mm/d，酒石酸钾钠（KNT）晶体则可达5mm/d以上。对同一晶体该数值还和晶体尺寸有关。
 \item 溶解度的温度系数。溶解度的温度系数不但随不同物质而异，而且对同一种物质在不同的温度区间也一样。例如KDP的溶解度曲线在高温部分（50---70℃）温度系数较大，在低温部分（30℃以下）则较小。
 \item 溶液的体积V（ml）和晶体生长表面积S（cm$^2$）之比，简称体面比。有些晶体（如KDP型晶体）在生长过程中，生长面积基本不变，而有些晶体（如KNT）在各个方向上都生长，S在生长过程中则在不断增加。
