--- a/vol1/cp03/sc03.tex
+++ b/vol1/cp03/sc03.tex
@@ -1,7 +1,7 @@
 \setcounter{section}{2}
 \section{从溶液中生长晶体的方法}
 从溶液中生长晶体过程的最关键因素是控制溶液的过饱和度。使溶液达到过饱和状态，在晶体生长过程中维持其过饱和度的途径有：
-\begin{enumerate}[(1)]
+\begin{enumerate}[(1)]\itemsep -0.5ex
 \item 据溶解度曲线，改变温度。
 \item 采取各种方式（如蒸发、电解）移去溶剂，改变溶液成分。
 \item 通过化学反应来控制过饱和度。由于化学反应速度和晶体生长速度差别很大，做到这一点是很困难的，需要采取一些特殊的方式，如通过凝胶扩散使反应缓慢进行等。
