主要关于插图的一些微调

--- a/common/packages.tex
+++ b/common/packages.tex
@@ -3,6 +3,7 @@
 \hypersetup{linkcolor=black}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{subfigure}
 \usepackage{enumerate}
 \usepackage{booktabs}
 \setCJKmainfont[BoldFont={方正黑体简体}, ItalicFont={方正报宋_GBK}] {方正书宋_GBK}
