--- a/vol1/cp03/sc03_01.tex
+++ b/vol1/cp03/sc03_01.tex
@@ -23,7 +23,7 @@ EGT\quad$\rm ???$ & 598 & $+2.1$\\
 
 \begin{figure}[h]
  \centering
- \includegraphics[width=0.8\textwidth]{fig/cp03/img3.18.jpg}
+ \includegraphics[width=0.5\textwidth]{fig/cp03/img3.18.jpg}
  \caption{水浴育晶装置。图中：}
  1为掣晶杆；2为晶体；3为转动密封装置；4为浸没式加热器； \\
  5为搅拌器；6为控制器（接触温度计）；7为温度计；8为育晶器；\\
@@ -34,14 +34,14 @@ EGT\quad$\rm ???$ & 598 & $+2.1$\\
 
 育晶器内的控温精度除了与育晶装置的结构有关外，很大程度上取决于控温装置，继电器开关式控温一般可以满足水溶液晶体生长的要求，温度波动可以控制在±0.05℃以下，用PID控温方式，特别是使用可编程温度控制器控温，实现控温精度至±0.005℃并不困难，这对培养高完整性单晶十分有利。
 
-\begin{figure}[h]
+\begin{figure}[htb]
  \centering
- \includegraphics[width=0.6\textwidth]{fig/cp03/img3.19.jpg}
+ \includegraphics[width=0.4\textwidth]{fig/cp03/img3.19.jpg}
  \caption{直接加热的转动育晶器。}
  图中：1为掣晶板；2为晶体；3为底部主加热器；4为控制器； 5为辅助小灯泡加热器；6为温度计；7为可逆转动装置（30r/min）。
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[htb]
  \centering
  \includegraphics[width=0.6\textwidth]{fig/cp03/img3.20.jpg}
  \caption{双浴槽育晶装置。图中：}
