--- a/vol1/cp03/sc03_03.tex
+++ b/vol1/cp03/sc03_03.tex
@@ -17,15 +17,15 @@ $\rm LiIO_3$ & 431 & $0.2$\\
 
 蒸发法生长晶体的装置有许多类型。图3.23示出的是比较简单的一种：在严格密封的育晶器上方设置冷凝器（可通水冷却）。溶剂自溶液表面不断蒸发，水蒸汽在冷凝器上凝结，并积聚在其下方的小杯内，再用虹吸管按控制量移出育晶器外，在晶体生长过程中，取水速度应小于冷凝速度，使大部分冷凝水（包括器壁上的）回流到液面上去，否则液面上易产生自发结晶。这种装置比较适合在较高的生长温度（$>$60℃）使用。温度较低。蒸发量太小，不能满足晶体生长的需要。
 
-\begin{figure}[h]
+\begin{figure}[htb]
  \centering
- \includegraphics[width=0.8\textwidth]{fig/cp03/img3.23.jpg}
+ \includegraphics[width=0.4\textwidth]{fig/cp03/img3.23.jpg}
  \caption{蒸发法育晶装置。}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[hbt]
  \centering
- \includegraphics[width=0.8\textwidth]{fig/cp03/img3.24.jpg}
+ \includegraphics[width=0.4\textwidth]{fig/cp03/img3.24.jpg}
  \caption{生长NdPP晶体的装置。}
 \end{figure}
 
