--- a/vol1/cp03/sc01.tex
+++ b/vol1/cp03/sc01.tex
@@ -6,3 +6,4 @@
 \input{vol1/cp03/sc01_03} %饱和与过饱和
 \input{vol1/cp03/sc01_04} %溶液饱和温度、溶解度和过饱和度的测定
 \input{vol1/cp03/sc01_05} %溶剂的选择和水溶液的结构
+\input{vol1/cp03/sc01_06} %溶液的物理性质
