--- a/vol1/cp03/sc03_04.tex
+++ b/vol1/cp03/sc03_04.tex
@@ -13,7 +13,7 @@
 
 用电解溶剂法来生长KDP型（特别是DKDP晶体）获得了满意的结果。因为溶液中存在的常导致这些晶体柱面楔化的一些金属杂质离子（如Fe$^{3+}$，Al$^{3+}$，Cr$^{3+}$等）可以在电解过程中除去，从而消除这些杂质的有害影响。对DKDP晶体可以在低于其转变点的温度下生长，以防止单斜相的干扰，由于分解H$_2$O所需的能量比分解D$_2$O的要低，溶液中的H$_2$O在电解过程中比较容易除去。溶液在生长过程中可以保持较高的氘化程度。图3.26示出在普通转晶育晶器（图3.18）基础上改装的电解溶剂法生长这一类晶体的装置。阳极置于育晶器底部，为使电流均匀通过溶液，在溶液上方安置了两个电极，阴极放在喇叭形口的塑料管内，口上用尼龙网覆盖，使在阴极上产生的氢气引入通风良好的空间，防止其重新进入溶液。在阳极上产生的氧气进入育晶器中溶液上方的空间，保持正压，它投注于减少大气中的水汽和溶液中的氘发生交换而降低其含氘量。由于电解交流也会产生热量，因此也可以不使用底部加热器，而是将交流电直接通过电极加热，使用交、直流并用的加热—电解联合控制装置。晶体在溶液中转动以使溶液浓度均匀。由于溶液是强缓冲溶液，所以电解过程中溶液pH变化不大。
 
-\begin{figure}[h]
+\begin{figure}[htbp]
  \centering
  \includegraphics[width=0.4\textwidth]{fig/cp03/img3.26.jpg}
  \caption{由通常转晶育晶器改装的电解溶剂育晶装置。}
