--- a/vol1/cp03/sc03_01.tex
+++ b/vol1/cp03/sc03_01.tex
@@ -1,13 +1,13 @@
 ﻿\subsection{降温法}
 降温法是从溶液中培养晶体的一种最常用的方法。这种方法适用于溶解度和温度系数都较大的物质，并需要一定的温度区间。这一温度区间也是有限制的：温度上限由于蒸发量大而不宜过高，当温度下限太低时，对晶体生长也不利。一般来说，比较合适的起始温度是50---60℃，降温区间以15---20℃为宜。
 
-降温法的基本原理是利用物质较大的正溶解度温度系数，在晶体生长过程中逐渐降低温度，使析出的物质不断在晶体上生长。用这种方法生长的物质的溶解度温度系数最好不低于1.5g/1000g溶液$\cdot$℃，表3.7列出符合此要求的一些物质的数据。
+降温法的基本原理是利用物质较大的正溶解度温度系数，在晶体生长过程中逐渐降低温度，使析出的物质不断在晶体上生长。用这种方法生长的物质的溶解度温度系数最好不低于1.5g/1000g$\text{溶液}\cdot$℃，表3.7列出符合此要求的一些物质的数据。
 
 \begin{table}[h]
 \centering
 \caption{40℃时，一些物质的溶解度及其温度系数}
 \begin{tabular}{c|c|c}\toprule
-物质 & \tabincell{c}{溶解度\\（g/1000g溶液）} & \tabincell{c}{溶解度温度系数\\g/1000g溶液$\cdot$℃}\\\hline
+物质 & \tabincell{c}{溶解度\\（g/1000g溶液）} & \tabincell{c}{溶解度温度系数\\g/1000g$\text{溶液}\cdot$℃}\\\hline
 明矾\quad$\rm K_2SO_4\cdot Al_2(SO_4)_3\cdot 24H_2O$ & 240 & $+9.0$\\
 ADP\quad$\rm NH_4H_2PO_4$ & 360 & $+4.9$\\
 TGS\quad$\rm (NH_2CH_2COOH)_3\cdot H_2SO_4$ & 300 & $+4.6$\\
