fig/cp03: 增加章节相关图片 vol1/cp03/sc01_05.tex: 小错误修复(fix #2)

--- a/vol1/cp03/sc01_05.tex
+++ b/vol1/cp03/sc01_05.tex
@@ -24,7 +24,7 @@
 （图3.12）
 % 图3.12
 
-溶质在水中的存在，显著地改变了液体的性质。例如在电解质的水溶液中，离子是水合的。由于离子的库仑力作用，使水的氢键结构受到局部破坏，并将水分子吸引到自己周围，形成水合离子。根据Frank的水合离子模型（图3.12），包围阳离子的水分子分成A，B，C三层。在A层，包围阳离子的是一些由取向的水分子偶极形成的牢固的水合层，称为“第一级水合球”［也称为内配位球（inner co-ordination sphere）或近程水合（close hydration）］。在该层内，由于离子和水分子的相互作用，水分子不能移动。 但离子的静电作用还能超出A区，形成范围大得多的“第二级水合球"也称为外配位球（outer co-ordination sphere）或远程水合（distant hydration）]（图3 .12中的B区），其中包含的水分子是松散地结合起来的，但没有一定的取向。在c区中，水分子基本上没有受到离子的干扰，只存在水分子之间的相互作用，保持着水的结构。 B 区的情况则是由于A区和C区中两种不同的相互作用所造成的。 对一价的离子，通常有4个分子形成牢固的水合层。对高价离子（如$\rm Cr^{3+}$，$\rm Fe^{3+}$，$\rm Al^{3+}$），第一级水合球则有6个水分子，其水合离子形式为$\rm M(H_2O)_6^{3+}$，水合氢离子$\rm H_3O^+$常以$\rm H_3O(H_2O)^{3+}$形式存在。在水溶液中，离子对晶体生长的影响都和离子的水合有关（参阅3.4.2节）。
+溶质在水中的存在，显著地改变了液体的性质。例如在电解质的水溶液中，离子是水合的。由于离子的库仑力作用，使水的氢键结构受到局部破坏，并将水分子吸引到自己周围，形成水合离子。根据Frank的水合离子模型（图3.12），包围阳离子的水分子分成A，B，C三层。在A层，包围阳离子的是一些由取向的水分子偶极形成的牢固的水合层，称为“第一级水合球”［也称为内配位球（inner co-ordination sphere）或近程水合（close hydration）］。在该层内，由于离子和水分子的相互作用，水分子不能移动。 但离子的静电作用还能超出A区，形成范围大得多的“第二级水合球"也称为外配位球［（outer co-ordination sphere）或远程水合（distant hydration）］（图3 .12中的B区），其中包含的水分子是松散地结合起来的，但没有一定的取向。在c区中，水分子基本上没有受到离子的干扰，只存在水分子之间的相互作用，保持着水的结构。 B 区的情况则是由于A区和C区中两种不同的相互作用所造成的。 对一价的离子，通常有4个分子形成牢固的水合层。对高价离子（如$\rm Cr^{3+}$，$\rm Fe^{3+}$，$\rm Al^{3+}$），第一级水合球则有6个水分子，其水合离子形式为$\rm M(H_2O)_6^{3+}$，水合氢离子$\rm H_3O^+$常以$\rm H_3O(H_2O)^{3+}$形式存在。在水溶液中，离子对晶体生长的影响都和离子的水合有关（参阅3.4.2节）。
 
 在重水溶液中，离子也是水合的，但由于在水合过程中，破坏重水中的氘键要比破坏水中的氢键消耗更多的能量，因此大多数盐类在重水中的溶解度要比在普通水中的溶解度小。磷酸盐是个例外（如$\rm KD_2PO_2$在$\rm D_2O$中的溶解度大于$\rm KH_2PO_2$在$\rm H_2O$中的溶解度），看来这与在磷酸根离子和重水之间形成更加牢固的氘键有关。
 
