--- a/vol1/cp03/sc01_02.tex
+++ b/vol1/cp03/sc01_02.tex
@@ -24,11 +24,16 @@ c_1=\frac{100c_2}{100-c_2}=\frac{100c_3}{100R-c_3}=\frac{100c_4}{100R+c_4(R-1)},
 
 在我们所讨论的溶液体系中，压力对溶解度影响是很小的，但温度的影响却十分显著。这种温度-浓度关系可用溶解度曲线表示。图3.3示出一些常用水溶性晶体的溶解度曲线。从图3.3中可以看出，不同物质在水中的溶解度是有明显差别的。
 
-%TODO: 图3.3
-（图3.3）
-% 图3.3一些水溶性晶体的溶解度曲线
-%1.酒石酸钾钠(KNT); 2 .酒石酸钾(DKT); 3，酒石酸乙二胺(EDT);
-%4.磷酸二氢铵(ADP);5.硫酸甘氨酸(TGS); 6.碘酸锂（(L)；7.磷酸二氢钾(KDP); 8.硫酸锂(LSH)。
+\begin{figure}[hpb]
+ \centering
+ \includegraphics[width=0.8\textwidth]{fig/cp03/img3.3.jpg}
+ \caption{一些水溶性晶体的溶解度曲线}
+ 1.酒石酸钾钠(KNT); 2.酒石酸钾(DKT); 3.酒石酸乙二胺(EDT);
+ 
+ 4.磷酸二氢铵(ADP); 5.硫酸甘氨酸(TGS); 6.碘酸锂($\rm LiIO_3$);
+ 
+ 7.磷酸二氢钾(KDP); 8.硫酸锂(LSH)。
+\end{figure}
 
 有的晶体溶解度很大，如DKT，但有的则较小，如LSH，而大多数晶体的溶解度均随温度升高而增大（溶解度温度系数为正值）。有的晶体溶解度温度系数很大（如KNT)，但也有少数晶体（如LSH，Li等），溶解度的温度系数很小，而且是负值。有的晶体溶解度曲线出现拐点（如EDT），这种物质有两种不同的溶解度晶相，即EDT无水物和水合物。图3.3中所示的溶解度曲线实际上是由EDT和$\rm EDT\cdot H_2O$两条溶解度曲线组成的，这两条曲线在拐点（40.6℃）相交。该点的温度称为相平衡转变温度。
 
@@ -60,8 +65,18 @@ c=A+Bt+Ct^2+\cdots,
 \end{equation}
 式中$c$为一定量溶剂中溶质的重量，$A,B,C$是和溶液体系（溶质-溶剂）有关的常数。式（3.5）和式（3.6）是表示温度对溶解度影响的最常用的表达式。
 
-%TODO: 图3.4
-（图3.4）
+%图3.4
+\begin{figure}[hpb]
+ \centering
+ \subfigure[浓度(g/100g$\rm H_2O$)]{
+  \includegraphics[width=0.6\textwidth]{fig/cp03/img3.4a.jpg}
+ }
+ \subfigure[无机物在水中的摩尔数（对数标尺）]{
+  \includegraphics[width=0.6\textwidth]{fig/cp03/img3.4b.jpg}
+ }
+ \caption{一些盐类的溶解度曲线。}
+ (a)为通常温度—浓度作图法; (b)为据式(3.5)对数坐标作图法。
+\end{figure}
 
 根据式（3.5）作图得出的溶解度曲线如图3.4（b）所示。图中的横坐标为溶质摩尔分数的对数坐标。右边纵坐标是（因为在273-373K范围内数值很小）的线性坐标。另外，也可以用专门的对数-倒数坐标图纸，将温度（℃）直接在图上标出。图3.4（b）中左边示出的纵坐标就是倒数标尺上直接标出的温度。将图3.4（a），（b）加以比较就可发现这种作图法有如下的一些优越性：
 \begin{enumerate}[(1)]\itemsep -0.5ex
