--- a/vol1/cp03/sc01_03.tex
+++ b/vol1/cp03/sc01_03.tex
@@ -1,13 +1,18 @@
 ﻿\subsection{饱和与过饱和}
 与溶质固相处于平衡状态的溶液称该物质的饱和溶液。溶解度曲线实际上给出不同温度下的饱和溶液的浓度，所以溶解度曲线也称为饱和曲线。在一定条件下，对给定的物质，这条曲线是确定的，可以通过准确测定物质在不同温度下的溶解度绘制出来。
 
-（图3.5）
+\begin{figure}[hbp]
+ \centering
+ \includegraphics[width=0.5\textwidth]{fig/cp03/img3.5.jpg}
+ \caption{二元体系相图，$\alpha\beta$为从溶液中生长晶体的区域。}
+\end{figure}
 
-如果A为溶质，B为溶剂，A与B之间也不形成任何化合物，
-
-（图3.6）
-
-则图3.6中的溶解度曲线就是图3.5中液相线的一部分$\alpha\beta$。图3.6中曲线$\alpha\beta$的下部是不饱和溶液区，$\alpha\beta$的上方是固相和溶液共存区。当溶液状态进入该区时，应当结晶出固相A，此时的溶液浓度应为在该温度下和固相A相平衡的饱和溶液的浓度。但实际上，这样的溶液常常不析出晶体。这种所含溶质量比在同一条件下饱和溶液中所含溶质量要多的溶液称为过饱和溶液。凡是状态点处在饱和曲线以上区域内的溶液都是过饱和溶液，所以这个区域也称为过饱和溶液区。
+\begin{figure}[htpb]
+ \centering
+ \includegraphics[width=0.5\textwidth]{fig/cp03/img3.6.jpg}
+ \caption{饱和曲线（溶解度曲线）。}
+\end{figure}
+如果A为溶质，B为溶剂，A与B之间也不形成任何化合物，则图3.6中的溶解度曲线就是图3.5中液相线的一部分$\alpha\beta$。图3.6中曲线$\alpha\beta$的下部是不饱和溶液区，$\alpha\beta$的上方是固相和溶液共存区。当溶液状态进入该区时，应当结晶出固相A，此时的溶液浓度应为在该温度下和固相A相平衡的饱和溶液的浓度。但实际上，这样的溶液常常不析出晶体。这种所含溶质量比在同一条件下饱和溶液中所含溶质量要多的溶液称为过饱和溶液。凡是状态点处在饱和曲线以上区域内的溶液都是过饱和溶液，所以这个区域也称为过饱和溶液区。
 
 溶液都具有程度不同的过饱和现象。过饱和状态是从溶液中生长晶体的前提条件，因此从上一世纪以来就对过饱和溶液进行了较深人的研究。
 
@@ -15,7 +20,11 @@
 
 随后，Miers对自发结晶和过饱和度之间的关系进行了广泛的研究。他测量了许多盐类的浓溶液在冷却过程中折射率的变化，试图找出过饱和溶液中不稳区和亚稳区的界限。他的实验结果可用图3.7来表示，图中除了溶解度曲线外，在其上方还有一条溶液开始自发结晶的界限，称为过溶解度曲线．这条曲线将过饱和溶液分为亚稳区和不稳区。过溶解度曲线不像溶解度曲线那样确定，极易受一些外界因素（如溶液搅拌程度）影响。关于这一观点引起了很大争论，有的人认为不可能存在这样一条使溶液性质突然起变化的曲线，有的人则倾向于把过溶解度曲线看成是位于过饱和区的一个区域或窄带。
 
-（图3.7）
+\begin{figure}[htb]
+ \centering
+ \includegraphics[width=0.5\textwidth]{fig/cp03/img3.7.jpg}
+ \caption{溶液状态图}
+\end{figure}
 
 但是不论过溶度曲线是否真实存在，但在过饱和区，靠近溶解度曲线确实存在亚稳区，这个事实是毋庸置疑的。整个温度-浓度图还是可分成稳定区、亚稳区和不稳区三个区域，其中稳定区是确定的，而亚稳区和不稳区在一定程度上是可变的，很难严格区分。这些区域的特征如下：
 
