--- a/vol1/cp03/sc01_06.tex
+++ b/vol1/cp03/sc01_06.tex
@@ -49,8 +49,16 @@ x^2=2Dt=\frac{kTt}{3\pi\eta r}
 \paragraph{(4) 折射率}
 通过测量溶液的折射率，可迅速确定溶液的浓度。常用的测量装置是阿贝折射仪。对于研究结晶过程，读数精确到小数第四位就足够了。考虑到温度的影响，在进行实际测量前，还需作校正曲线。如使用浸没式折射仪，还可对溶液结晶时的浓度变化进行半连续的测量。由于结晶时溶液中有大量微晶散射光线，使稜镜得不到充分的照明，为此可利用光纤从外部对稜镜\footnote{编者注：原文如此。}周围进行照明。图3.13示出用阿贝折射仪在40℃时测定的KDP、DKDP和ADP的折光指数与溶液浓度的关系。
 
-%TODO: 图3.13
-（图3.13）
+%图3.13
+
+\begin{figure}[htb]
+ \centering
+ \includegraphics[width=0.4\textwidth]{fig/cp03/img3.13.jpg}
+ \caption{几种溶液的折光指数对浓度曲线。}
+ $t_{\rm K_4}, t_{\rm DK_4},t_{\rm A_4}$分别表示温度为40℃的KDP，DKDP和ADP溶液。
+ 
+ $t_{\rm DK_2}$示温度为20℃的DKDP溶液。实线是激光，虚线为钠光。
+\end{figure}
 
 \paragraph{(5) 电导率}
 水溶液的电导率可以十分精确地测量出来，因此可作为测量浓度的有效方法。但已做的工作大都局限于稀溶液体系，在接近饱和和过饱和溶液中所得到的测量结果常不可靠。由于电导率也和温度有关，所以要求有高精度的控温。
