cp03/sc01_03.tex: 完成表3.1、3.2

--- a/vol1/cp03/sc01_03.tex
+++ b/vol1/cp03/sc01_03.tex
@@ -42,9 +42,43 @@
 \end{eqnarray}
 其中$c$是溶液的实际浓度，$c^*$是溶液在同一温度下的平衡饱和浓度（图3.7）。在以上三种表示方式中，只有是有量纲的（用摩尔分数表示是例外），其数值随浓度表示方式的不同而差别很大，但对$s$和$\sigma$的影响却不很明显（表3.1）。表示过饱和度时，必须注明溶液温度，因为溶液的平衡饱和浓度是随温度的变化而变化。
 
-%TODO: 表3.1 3.2
-（表3.1）（表3.2）
+\begin{table}[hptb]
+\centering
+\caption{硫酸钾（分子量174）水溶液的不同浓度表示方式的过饱度比较}
+20摄氏度时，$c^*=109{\rm\,g\  K_2SO_4/100g\text{水}}$（密度$\rm 1.08g/cm^3$），
+$c=116{\rm g/100g\text{水}}$（密度$\rm 1.09g/cm^3$）\\
+\begin{tabular}{l|c|c|c|c|c}\toprule
+浓度表示方式 & $c$ &$c^*$ &$\Delta c$ & $s$ & $\sigma$ \\\midrule
+$\rm g/1000g$水 & 116 & 109 & 7.0 & 1.06 & 0.06\\
+$\rm g/1000g$溶液 & 104 & 98.3 & 5.7 & 1.06 & 0.06\\
+$\rm g/\text{升溶液}$ & 113.3 & 106.1 & 7.2 & 1.07 & 0.07\\
+摩尔分数 & 0.0119 & 0.0112 & 0.0007 & 1.06 & 0.06\\
+\bottomrule
+\end{tabular}
+\end{table}
 
+\begin{table}[hpbt]
+\centering
+\caption{一些盐类水溶液的最大可允许过冷度}
+\begin{tabular}{c|c||c|c}\toprule
+物质 & $\Delta t$（℃） & 物质 & $\Delta t$（℃）\\\midrule
+NaCl & 4.0 & $\rm (NH_4)_2SO_4Al_2(SO_4)_3\cdot 24H_2O$ & 3.0\\
+$\rm NH_4Cl$ & 0.7 & $\rm Na_2B_4O_7\cdot 10H_2O$ & 3.0\\
+$\rm NH_4NO_3$ & 0.6 & $\rm NaNO_2$ & 0.9\\
+$\rm (NH_4)_2SO_4$ & 1.8 & $\rm Na_2SO_4\cdot 10H_2O$ & 0.3\\
+$\rm NH_4H_2PO_4$ & 2.5 & KBr & 1.1\\
+$\rm CuSO_4\cdot 5H_2O$ & 1.4 & KCl & 1.1\\
+$\rm FeSO_4\cdot 7H_2O$ & 0.5 & KI & 0.6\\
+$\rm Na_2HPO_4\cdot 12H_2O$ & 0.4 & $\rm KH_2PO_4$ & 9.0\\
+$\rm NaNO_3$ & 0.9 & $\rm KNO_3$ & 0.4\\
+$\rm MgSO_4\cdot 7H_2O$ & 1.0 & $\rm KNO_2$ & 0.8\\
+$\rm NiSO_4\cdot 7H_2O$ & 4.0 & $\rm K_2SO_4$ & 6.0\\
+$\rm NaBr\cdot 10H_2O$ & 0.6 & NaI & 1.0\\
+$\rm Na_2CO_3\cdot 10H_2O$ & 0.6 & $\rm Na_2S_2O_3\cdot 5H_2O$ & 1.0\\
+$\rm Na_2CrO_4\cdot 10H_2O$ & 1.6 & $\rm K_2SO_4\cdot Al_2(SO_4)_3\cdot 24H_2O$ & 4.0\\
+\bottomrule
+\end{tabular}
+\end{table}
 过饱和度也可用温度来表示。若将某一物质在$t^*$℃时，将其饱和溶液冷却至$t$℃，溶液进入过饱和状态，如果没有结晶析出，则该溶液的过饱和度为$\Delta t=(t^*-t)$（见图3.7），这实际上就是溶液的过冷度（在单组分体系中，只用过冷度而不使用过饱和度这个名词）。一些盐类水溶液的最大可容许过冷度列于表3.2中。这些数据是将25℃的饱和溶液在有晶体存在和适当搅拌的情况下，通过缓慢降温测得的。虽然在实验室条件下测得的过冷度和生产实践中的情况有较大差别，但也可以作为对在该实验条件下比较不同物质溶液亚稳区大小的量度。过冷度和过饱和度的关系为
 \begin{equation}
 \Delta c = \left(\frac{dc^*}{dt}\right)\Delta t.
